Clean project: Remove sensitive data and update structure
- вњ… Added config.json to .gitignore to protect API keys
- вњ… Created config.json.template for new users
- вњ… Removed all temporary and duplicate files
- вњ… Created simplified Setup.bat for configuration
- вњ… Created Change-Wallpaper.bat for quick wallpaper change
- вњ… Updated README.md with new file structure
- вњ… Removed build artifacts and sensitive data

New structure:
- Setup.bat - interactive configuration
- Change-Wallpaper.bat - quick wallpaper change
- Unsplash-BG.ps1 - main PowerShell script
- config.json.template - template for new users
- README.md - updated documentation

Security: API keys and user configs are now excluded from git

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 downloads/
 temp/
 
+# Configuration with sensitive data
+config.json
+history.json
+
 # Windows
 Thumbs.db
 ehthumbs.db
@@ -25,3 +29,7 @@ Desktop.ini
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Build artifacts
+bin/
+*.exe
