Update .gitignore to enhance file exclusion for Unsplash downloads
- Add specific entries to ignore Unsplash download directories and temporary files.
- Improve clarity on the purpose of ignored files related to Unsplash background caching.

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,14 @@
 *.tmp
 logs/
 
-# Unsplash downloads
+# Unsplash downloads / cache (Windows $env:TEMP\UnsplashBG or in-repo)
 downloads/
 temp/
+UnsplashBG/
+$env:TEMP/
+*UnsplashBG*/
+$env:TEMP*
+**/unsplash_*.jpg
 
 # Configuration with sensitive data
 config.json
